--- a/blogs/transparency.html
+++ b/blogs/transparency.html
@@ -77,8 +77,7 @@
         <div class="page-notch page-notch--color-white page-notch--med">
             <div class="page-notch__content">
                 <span class="page-notch__sup-text">Blog 12. 10. 2023.</span>
-                <h1 class="page-notch__heading">Typing with toddlers:</h1>
-                <h2 class="page-notch__sub-heading">Making remote work, work</h2>
+                <h1 class="page-notch__heading page-notch__heading--long">Transparency, Talk, and the Road Less Traveled</h1>
             </div>
         </div>
     </header>
@@ -87,61 +86,56 @@
                 <div class="u-mw-90vw-tab-land u-center-div u-mw-130 u-round-edges u-inherit-background u-padding-min u-content-layer">
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            It’s 3.30pm plus change. My three year old daughter is lying on my shoulder, recovering from one of the inevitable bugs that comes with nursery, while my semi-comatose wife is on the sofa next to me, currently in the trenches with the same sickness.
+                            I always get stage fright any time we have to do calls with new potential friends and clients. It’s a talking thing for me… Or maybe not knowing when to stop. Dani said to me once that in our tandem, he was always good for the online calls because he could convey all our points in tight time in a straightforward way. That’s completely true. I on the other hand am the ‘good first date’, great for a less pressured meet like a coffee. 
                         </span>
                     </p>
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            Not an ideal situation, for sure. But it’s also not game breaking. Ultimately we’re all human; we have human speed bumps every day that, with a bit of flexibility and proper communication, become complete non-issues. And everything’s fine as long as there’s still one hand to type… 
+                            Last week I met with a CEO of mine from a previous role. Amazingly considered gentleman, always a good person to listen to when you want to properly gather your thoughts. 
                         </span>
                     </p>
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            That’s been a huge benefit to working in an entirely remote environment for such a long time. At this moment, almost all of the FWRD team has been together for at least eight years, and every member of staff is native to this kind of working style. That’s an amazing launchpad to build on; there’s already a deep and intrinsic understanding of staff as individuals, in their professional skill sets but also in their own lives. 
+                            ‘It’s always been a point for me to consider not what I’m doing in a job, but why I’m doing it in the first place. Why does this task right now, at this moment, deserve my energy?’
                         </span>
                     </p>
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            It’s not a ‘shit-happens’ approach. It’s realising that everyone is navigating their own life baggage, and actually as an organisation we can be more empathetic to those situations. We can support staff in whatever way we can, and make Monday to Friday a welcoming environment where they can do their best work. This idea sits in every pillar of how FWRD operates.
+                            Now we’d of course thought about that, though in my own case maybe in a slightly more chaotic way, but we wanted that premise to FWRD, and how it transpires in our day to day missions. 
                         </span>
                     </p>
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            Respect is non-negotiable. We are product first with one caveat. Everyone deserves to be a part of a workspace where they are treated with consideration, dignity and courtesy. We want our people to want to log in every morning and make cool shit together. If we don’t have that, there’s something wrong.
-                        </span>
-                    </p>
-                    <p class="paragraph">
-
-                        <span class="paragraph__content paragraph__content--helvetica">
-                            <span class="paragraph__line paragraph__content--helvetica">
-                                Create and collaborate. There are some outstanding professionals at FWRD, in design, operations, merchandising and more, but none of us would produce our best work without each other. Moreover, we have a hugely diverse and global clientele. If we’re going to match their ambitions, as well as our own, we have to actively engage with the creative ideas of others. There’s a reason the fusion dance was so important in Dragon Ball Z*. 
+                            <span class="paragraph__line">
+                                1. Transparent Talks
                             </span>
-                            Ultimately, proper communication, transparency, and an open mind (both internally and on client side) are the most important factors when building a great product, whether that’s digital product, merch and apparel or any other creative.
+                            At FWRD, what you see is what you get. Clear waters where you can see right to the river bed. That’s how we operate internally and with our clients. No murky waters, no agendas. It’s not just about being upfront with numbers or metrics (though that's essential); it's about honesty in our intentions, our motivations, and our hopes for every project. If there’s a hiccup, we address it. If there’s a win, we celebrate it. That's how we build trust in a long lasting relationship.
                         </span>
                     </p>
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            *This is precisely the reason for collaboration - there is sincere doubt that many readers (if any) will understand the reference. 
+                            <span class="paragraph__line">
+                                2. Open Channels
+                            </span>
+                            Our channels of communication are like open boulevards, welcoming every idea, concern, or even the odd meme to brighten up our day. It's this commitment to open dialogue that ensures no one's ever in the dark. It’s part of our culture, staying informed, and ready for action. Whether we're sharing a new idea, providing feedback, or simply checking in on each other, our channels of communication are always open. We're always in the loop, always connected, always striving to be on the same page.
                         </span>
                     </p>
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            Flexibility, flexibility, flexibility. Yes we have working hours and we get the need to be present. But we also realise that productivity is volatile; no one is at 100% all the time, and 9am to 5pm doesn’t suit everyone. The important thing is to set expectations. Deadlines are paramount, as are proper briefs!
+                            <span class="paragraph__line">
+                                3. The Joy of the Journey
+                            </span>
+                            For us, it's never just about crossing the finish line; it's about the road, embracing the scenery, and taking all the pit stop learnings along the way. We’re passionate believers in the age-old saying, "It's not the destination, but the journey." Sure, we have our eyes on the prize, but we also cherish every brainstorming session, every lightbulb moment, and even those headdesk "why didn’t we think of that sooner?" revelations.
                         </span>
                     </p>
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            Of course, like anything, remote work in a creative environment isn’t without its challenges. It demands discipline, self-motivation and above all a fundamental understanding of the people you’re working with. But with the right foundations, the benefits can be bountiful.
+                            These are the bits of magic that gets this place buzzing with passion, and really carve out a complete end product. By design, FWRD is constructed to ensure every team member is empowered to engage, align, and, above all, feel their impact valued with the projects we take on, and that is fundamentally what keeps us ticking.
                         </span>
                     </p>
                     <p class="paragraph">
                         <span class="paragraph__content paragraph__content--helvetica">
-                            So as my daughter now snores on my shoulder, and I develop carpal tunnel in my right hand, I’m grateful. If you’re in a remote team, embrace the positives. And if you’re considering making the shift, I hope this little insight helps you see the glowing potential of a proper work-life balance.
-                        </span>
-                    </p>
-                    <p class="paragraph">
-                        <span class="paragraph__content paragraph__content--helvetica">
-                            Until next time my mammals,
+                            Yee-to-the-haw.
                         </span>
                     </p>
                     <p class="paragraph">
