--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <ul class="overlaying-navigation__list">
                     <li class="overlaying-navigation__list-item"><a href="./index.html" class="overlaying-navigation__link">Home</a></li>
                     <li class="overlaying-navigation__list-item"><a href="./links/portfolio.html" class="overlaying-navigation__link">Portfolio</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Services</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Testimonials</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Contact</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./links/services.html" class="overlaying-navigation__link">Services</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./links/testimonials.html" class="overlaying-navigation__link">Testimonials</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./links/contact.html" class="overlaying-navigation__link">Contact</a></li>
                 </ul>
             </div>
             <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
@@ -37,27 +37,27 @@
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
                             <img src="./img/svg/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
                             <img src="./img/svg/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
-                    <li class="footer__list-item">
+                    <!-- <li class="footer__list-item">
                         <a href="#" class="footer__link">
                             <img src="./img/svg/dribble.svg" alt="" class="footer__social-media">
                         </a>
-                    </li>
+                    </li> -->
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                             <img src="./img/svg/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
                             <img src="./img/svg/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -125,9 +125,9 @@
                         <ul class="navigation__list">
                             <li class="navigation__item"><a href="./index.html" class="navigation__link">Home</a></li>
                             <li class="navigation__item"><a href="./links/portfolio.html" class="navigation__link">Portfolio</a></li>
-                            <li class="navigation__item"><a href="" class="navigation__link">Services</a></li>
-                            <li class="navigation__item"><a href="" class="navigation__link">Testimonials</a></li>
-                            <li class="navigation__item"><a href="" class="navigation__link">Contact</a></li>
+                            <li class="navigation__item"><a href="./links/services.html" class="navigation__link">Services</a></li>
+                            <li class="navigation__item"><a href="./links/testimonials.html" class="navigation__link">Testimonials</a></li>
+                            <li class="navigation__item"><a href="./links/contact.html" class="navigation__link">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -138,30 +138,36 @@
                     </div>
                     <div class="header__content-box">
                         <div class="composition">
-                            <figure class="composition__item composition__item--1">
-                                <figcaption class="composition__image-title">
-                                    <span class="text">
-                                        <span class="text--top">Store spotlight</span>
-                                        <span class="text--main">Kreekcraft</span>
-                                    </span>
-                                </figcaption>
-                            </figure>
-                            <figure class="composition__item composition__item--3">
-                                <figcaption class="composition__image-title">
-                                    <span class="text">
-                                        <span class="text--top">Website & product spotlight</span>
-                                        <span class="text--main">Ian Bick</span>
-                                    </span>
-                                </figcaption>
-                            </figure>
-                            <figure class="composition__item composition__item--2">
-                                <figcaption class="composition__image-title">
-                                    <span class="text">
-                                        <span class="text--top">Website & store spotlight</span>
-                                        <span class="text--main">Pixel playground</span>
-                                    </span>
-                                </figcaption>
-                            </figure>
+                            <a href="./case-studies/pixel.html" class="composition__link-item">
+                                <figure class="composition__item composition__item--1">
+                                    <figcaption class="composition__image-title">
+                                        <span class="text">
+                                            <span class="text--top">Store spotlight</span>
+                                            <span class="text--main">Kreekcraft</span>
+                                        </span>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                            <a href="./case-studies/pixel.html" class="composition__link-item">
+                                <figure class="composition__item composition__item--3">
+                                    <figcaption class="composition__image-title">
+                                        <span class="text">
+                                            <span class="text--top">Website & product spotlight</span>
+                                            <span class="text--main">Ian Bick</span>
+                                        </span>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                            <a href="./case-studies/pixel.html" class="composition__link-item">
+                                <figure class="composition__item composition__item--2">
+                                    <figcaption class="composition__image-title">
+                                        <span class="text">
+                                            <span class="text--top">Website & store spotlight</span>
+                                            <span class="text--main">Pixel playground</span>
+                                        </span>
+                                    </figcaption>
+                                </figure>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -172,7 +178,7 @@
                                 <object data="./img/svg/star-icon.svg" type="image/svg+xml" class="offerings__icon"></object>
                             </span>
                             <span class="offerings__item-description">
-                                <a href="#" class="offerings__link">Brand and creative</a>
+                                <a href="./links/services.html" class="offerings__link">Brand and creative</a>
                             </span>
                         </li>
                         <li class="offerings__item">
@@ -180,7 +186,7 @@
                                 <object data="./img/svg/digi-product-icon.svg" type="image/svg+xml" class="offerings__icon"></object>
                             </span>
                             <span class="offerings__item-description">
-                                <a href="#" class="offerings__link">Web design</a>
+                                <a href="./links/services.html" class="offerings__link">Web design</a>
                             </span>
                         </li>
                         <li class="offerings__item">
@@ -188,7 +194,7 @@
                                 <object data="./img/svg/shirt-icon.svg" type="image/svg+xml" class="offerings__icon"></object>
                             </span>
                             <span class="offerings__item-description">
-                                <a href="#" class="offerings__link">Merchandise</a>
+                                <a href="./links/services.html" class="offerings__link">Merchandise</a>
                             </span>
                         </li>
                     </ul>
@@ -242,9 +248,9 @@
                     </div>
                     <div class="u-center-text u-padding-top-med">
                         <button class="button button--green section-projects__button">
-                            <span class="button__text">
+                            <a href="./links/portfolio.html" class="button__text">
                                 View more projects
-                            </span>
+                            </a>
                         </button>
                     </div>
             </div>
@@ -266,7 +272,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-blog">
+        <section class="section-blog" id="section-blog">
             <div class="background-layer">
                 <img src="./img/svg/bg-green-corner-wave.svg" alt="Green wave decorative image" class="section-blog__wave"/>
                 <img src="./img/svg/blog-purple-wave.svg" class="section-blog__bottom-wave">
@@ -297,16 +303,16 @@
                             </div>
                         </li>
                     </ul>
-                    <div class="u-center-text">
+                    <!-- <div class="u-center-text">
                         <button class="button button--green section-blog__button">
                             <span class="button__text">
                                 More stories
                             </span>
                         </button>
-                    </div>
+                    </div> -->
             </div>
         </section>
-        <section class="section-form">
+        <section class="section-form" id="section-form">
                 <div class="u-center-text u-section-title  u-padding-bottom-med">
                     <h2 class="h-1">
                         <span class="u-text-block">Tell us about</span>
@@ -362,38 +368,38 @@
             </div>
             <ul class="footer__list">
                 <div class="footer__list-section">
-                    <li class="footer__list-item"><a href="#" class="footer__link">About</a></li>
-                    <li class="footer__list-item"><a href="#" class="footer__link">Portfolio</a></li>
-                    <li class="footer__list-item"><a href="#" class="footer__link">Blog</a></li>
-                    <li class="footer__list-item"><a href="#" class="footer__link">Testimonials</a></li>
-                    <li class="footer__list-item"><a href="#" class="footer__link">Contact us</a></li>
+                    <li class="footer__list-item"><a href="./links/services.html" class="footer__link">About</a></li>
+                    <li class="footer__list-item"><a href="./links/portfolio.html" class="footer__link">Portfolio</a></li>
+                    <li class="footer__list-item"><a href="#section-blog" class="footer__link">Blog</a></li>
+                    <li class="footer__list-item"><a href="./links/testimonials.html" class="footer__link">Testimonials</a></li>
+                    <li class="footer__list-item"><a href="./links/contact.html" class="footer__link">Contact us</a></li>
                 </div>
                 <div class="footer__list-section">
                     <li class="footer__list-item">
                         <a href="" class="footer__link">Follow us</a>
                         <ul class="footer__list footer__list--standalone">
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
                                     <img src="./img/svg/instagram.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://www.behance.net/FWRD" class="footer__link">
                                     <img src="./img/svg/behance.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
-                            <li class="footer__list-item">
+                            <!-- <li class="footer__list-item">
                                 <a href="#" class="footer__link">
                                     <img src="./img/svg/dribble.svg" alt="" class="footer__social-media">
                                 </a>
-                            </li>
+                            </li> -->
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                                     <img src="./img/svg/linkedin.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
                                     <img src="./img/svg/facebook.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
@@ -405,7 +411,7 @@
                         </span>
                     </li>
                     <li class="footer__list-item u-left-padding-zero">
-                        <a href="" class="button button--green footer__button footer__link">Inquire</a>
+                        <a href="#section-form" class="button button--green footer__button footer__link">Inquire</a>
                     </li>
                 </div>
             </ul>
@@ -413,20 +419,37 @@
     </footer>
 </body>
 <script>
-    disableScrollOnNavigationHamburger();
-
     let clientsSlide = document.getElementById('clients-slide');
     let copy = clientsSlide.cloneNode(true);
     clientsSlide.parentNode.appendChild(copy);
 
-    function disableScrollOnNavigationHamburger(){
+    window.addEventListener('load', function(event) {
+        enableScroll();
+    });
+
+    const navigation = document.getElementById('navi-toggle');
+    navigation.addEventListener('change',(e)=>{
+        if(e.target.checked){
+            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
+            document.querySelector(".menu__logo-img").style.position = "fixed";
+        }
+        else{
+            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
+            document.querySelector(".menu__logo-img").style.position = "static";
+        }
+    })
+
+    function enableScroll(){
         const navigation = document.getElementById('navi-toggle');
-        navigation.addEventListener('click',()=>{
-        if(document.body.style.overflow == 'hidden')
-            document.body.style.overflow = 'visible'
-        else
-            document.body.style.overflow = "hidden"
-        })
+
+        if(navigation.checked){
+            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
+            document.querySelector(".menu__logo-img").style.position = "fixed";
+        }
+        else{
+            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
+            document.querySelector(".menu__logo-img").style.position = "static";
+        }
     }
 </script>
 </html>
