--- a/links/testimonials.html
+++ b/links/testimonials.html
@@ -17,11 +17,11 @@
         <div class="overlaying-navigation__nav">
             <div class="overlaying-navigation__nav-item u-margin-top-mid">
                 <ul class="overlaying-navigation__list">
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Home</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Portfolio</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Services</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Testimonials</a></li>
-                    <li class="overlaying-navigation__list-item"><a href="" class="overlaying-navigation__link">Contact</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="../index.html" class="overlaying-navigation__link">Home</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./portfolio.html" class="overlaying-navigation__link">Portfolio</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./services.html" class="overlaying-navigation__link">Services</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./testimonials.html" class="overlaying-navigation__link">Testimonials</a></li>
+                    <li class="overlaying-navigation__list-item"><a href="./contact.html" class="overlaying-navigation__link">Contact</a></li>
                 </ul>
             </div>
             <div class="overlaying-navigation__nav-item overlaying-navigation__nav-item--column">
@@ -31,27 +31,27 @@
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
                             <img src="../img/svg/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
                             <img src="../img/svg/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
-                    <li class="footer__list-item">
+                    <!-- <li class="footer__list-item">
                         <a href="#" class="footer__link">
                             <img src="../img/svg/dribble.svg" alt="" class="footer__social-media">
                         </a>
-                    </li>
+                    </li> -->
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                             <img src="../img/svg/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
                             <img src="../img/svg/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -66,11 +66,11 @@
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="" class="navigation__link">Home</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Portfolio</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Services</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Testimonials</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Contact</a></li>
+                    <li class="navigation__item"><a href="../index.html" class="navigation__link">Home</a></li>
+                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Portfolio</a></li>
+                    <li class="navigation__item"><a href="./services.html" class="navigation__link">Services</a></li>
+                    <li class="navigation__item"><a href="./testimonials.html" class="navigation__link">Testimonials</a></li>
+                    <li class="navigation__item"><a href="./contact.html" class="navigation__link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -212,27 +212,27 @@
                 <a href="" class="footer__link">Follow us</a>
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
                             <img src="../img/svg/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
                             <img src="../img/svg/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
-                    <li class="footer__list-item">
+                    <!-- <li class="footer__list-item">
                         <a href="#" class="footer__link">
                             <img src="../img/svg/dribble.svg" alt="" class="footer__social-media">
                         </a>
-                    </li>
+                    </li> -->
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                             <img src="../img/svg/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
                             <img src="../img/svg/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -251,20 +251,37 @@
 </div>
 </footer>
 </body>
-<script>
-    disableScrollOnNavigationHamburger();
-    
+<script>  
     let clientsSlide = document.getElementById('clients-slide');
     let copy = clientsSlide.cloneNode(true);
     clientsSlide.parentNode.appendChild(copy);
 
-    function disableScrollOnNavigationHamburger(){
+    window.addEventListener('load', function(event) {
+        enableScroll();
+    });
+
+    const navigation = document.getElementById('navi-toggle');
+    navigation.addEventListener('change',(e)=>{
+        if(e.target.checked){
+            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
+            document.querySelector(".menu__logo-img").style.position = "fixed";
+        }
+        else{
+            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
+            document.querySelector(".menu__logo-img").style.position = "static";
+        }
+    })
+
+    function enableScroll(){
         const navigation = document.getElementById('navi-toggle');
-        navigation.addEventListener('click',()=>{
-        if(document.body.style.overflow == 'hidden')
-            document.body.style.overflow = 'visible'
-        else
-            document.body.style.overflow = "hidden"
-        })
+
+        if(navigation.checked){
+            document.querySelector(".overlaying-navigation__button").style.position = "fixed";
+            document.querySelector(".menu__logo-img").style.position = "fixed";
+        }
+        else{
+            document.querySelector(".overlaying-navigation__button").style.position = "absolute";
+            document.querySelector(".menu__logo-img").style.position = "static";
+        }
     }
 </script>
