--- a/blogs/transparency.html
+++ b/blogs/transparency.html
@@ -154,26 +154,30 @@
                 </span>
             </div>
             <div class="content-layer">
-                    <ul class="content-items">
-                        <li class="content-items__item">
-                            <div class="content-items__header">
-                                <img src="../img/blog/blog-placeholder.png" alt="" class="content-items__image">
-                            </div>
-                            <div class="content-items__body">
-                                <span class="content-items__decorative-text"><span class="content-items__text">12. 07. 2023.</span></span>
-                                <p class="content-items__description">Lorem, ipsum dolor sit amet</p>
-                            </div>
-                        </li>
-                        <li class="content-items__item">
-                            <div class="content-items__header">
-                                <img src="../img/blog/blog-placeholder.png" alt="" class="content-items__image">
-                            </div>
-                            <div class="content-items__body">
-                                <span class="content-items__decorative-text"><span class="content-items__text">12. 07. 2023.</span></span>
-                                <p class="content-items__description">Lorem, ipsum dolor sit amet </p>
-                            </div>
-                        </li>
-                    </ul>
+                <ul class="content-items">
+                    <li class="content-items__item">
+                        <div class="content-items__header">
+                            <a class="content-items__link" href="./typingwithtoddlers.html">
+                                <img src="../img/blog/blog-toddlers.png" alt="" class="content-items__image">
+                            </a>
+                        </div>
+                        <div class="content-items__body">
+                            <span class="content-items__decorative-text"><span class="content-items__text">12. 07. 2023.</span></span>
+                            <p class="content-items__description">Typing with toddlers: making remote work, work</p>
+                        </div>
+                    </li>
+                    <li class="content-items__item">
+                        <div class="content-items__header">
+                            <a class="content-items__link" href="./transparency.html">
+                                <img src="../img/blog/blog-transparency.png" alt="" class="content-items__image">
+                            </a>
+                        </div>
+                        <div class="content-items__body">
+                            <span class="content-items__decorative-text"><span class="content-items__text">12. 10. 2023.</span></span>
+                            <p class="content-items__description">Transparency, Talk, and the Road Less Traveled</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
 </main>
