--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@
                     <ul class="content-items">
                         <li class="content-items__item">
                             <div class="content-items__header">
-                                <img src="./img/blog/blog-placeholder.png" alt="" class="content-items__image">
+                                <a class="content-items__link" href="./blogs/typingwithtoddlers.html">
+                                    <img src="./img/blog/blog-toddlers.png" alt="" class="content-items__image">
+                                </a>
                             </div>
                             <div class="content-items__body">
                                 <span class="content-items__decorative-text"><span class="content-items__text">12. 07. 2023.</span></span>
@@ -295,11 +297,13 @@
                         </li>
                         <li class="content-items__item">
                             <div class="content-items__header">
-                                <img src="./img/blog/blog-placeholder.png" alt="" class="content-items__image">
+                                <a class="content-items__link" href="./blogs/transparency.html">
+                                    <img src="./img/blog/blog-transparency.png" alt="" class="content-items__image">
+                                </a>
                             </div>
                             <div class="content-items__body">
-                                <span class="content-items__decorative-text"><span class="content-items__text">12. 07. 2023.</span></span>
-                                <p class="content-items__description">Lorem, ipsum dolor sit amet </p>
+                                <span class="content-items__decorative-text"><span class="content-items__text">12. 10. 2023.</span></span>
+                                <p class="content-items__description">Transparency, Talk, and the Road Less Traveled</p>
                             </div>
                         </li>
                     </ul>
@@ -376,7 +380,7 @@
                 </div>
                 <div class="footer__list-section">
                     <li class="footer__list-item">
-                        <a href="" class="footer__link">Follow us</a>
+                        <span class="footer__text">Follow us</span>
                         <ul class="footer__list footer__list--standalone">
                             <li class="footer__list-item">
                                 <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
